MultiUser Feature finalized. This is V2 now. Merging in Master soon.
