# app/Http/Controllers/Web/HomeController.php
@@ -2,8 +2,10 @@
 
 namespace App\Http\Controllers\Web;
 
+use App\User;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
+use Illuminate\Support\Facades\Auth;
 
 class HomeController extends Controller
 {
@@ -28,5 +30,16 @@ class HomeController extends Controller
         return view('welcome');
     }
 
+  /**
+   * Deletes a user
+   *
+   * @return \Illuminate\Contracts\Support\Renderable
+   */
+  public function unregister()
+  {
+    $user = User::where('id', Auth::user()->id)->firstOrFail();
+    $user->delete();
+    return view('auth.unregistered');
+  }
 
 }
