# resources/views/auth/unregistered.blade.php
@@ -1,0 +1,12 @@
+@extends('layouts.around')
+
+@section('content')
+  <div class="content">
+    <div class="subtitle m-b-md">
+      <h1>Goodbye</h1>
+      <p>Your user and all its userdata has been deleted from our system. :)</p>
+      <a href="/">Back to start...</a>
+    </div>
+  </div>
+
+@endsection
