# storage/api-docs/api-docs.json
@@ -367,6 +367,31 @@
                 ]
             }
         },
+        "/unregister": {
+            "post": {
+                "tags": [
+                    "Simple Auth"
+                ],
+                "summary": "Deletes all user data from system",
+                "operationId": "unregister",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
         "/me": {
             "get": {
                 "tags": [
